Finished "Task 5. Filters"

--- a/Module2/appsettings.json
+++ b/Module2/appsettings.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "NorthwindDatabase": "Server=.;Database=Northwind;Trusted_Connection=True;"
   },
-  "ProductsPageSize": 0
+  "ProductsPageSize": 0,
+  "LogActionExecutionPlan": true
 }
