Task4: CachaMiddleware skeleton added

--- a/Module2/appsettings.json
+++ b/Module2/appsettings.json
@@ -9,5 +9,10 @@
     "NorthwindDatabase": "Server=.;Database=Northwind;Trusted_Connection=True;"
   },
   "ProductsPageSize": 0,
-  "LogActionExecutionPlan": true
+  "LogActionExecutionPlan": true,
+  "ImageCacheMiddlewareSettings": {
+    "CacheDirectory": "",
+    "MaxCachedImageCount": 100,
+    "CacheExpirationTime": 1000
+  }
 }
