Finished - Task 4. Custom Middleware Created own middleware component for image caching. Full Task Desc: "- Check Content-Type every response and if returned any valid image format:   -- Keep image on the disk (as file)   -- If next request accessing to the same image, get it from cache directory - Support follow options:   -- Path for cache directory   -- Max count of cached images   -- Cache expiration time (if no requests during this time, cache cleaned)"

--- a/Module2/appsettings.json
+++ b/Module2/appsettings.json
@@ -10,9 +10,9 @@
   },
   "ProductsPageSize": 0,
   "LogActionExecutionPlan": true,
-  "ImageCacheMiddlewareSettings": {
-    "CacheDirectory": "",
-    "MaxCachedImageCount": 100,
-    "CacheExpirationTime": 1000
+  "ImageCacheMiddleware": {
+    "CacheDirectory": "D:\\Module2Images\\",
+    "CacheCapacity": 2,
+    "CacheExpirationInSeconds": 10
   }
 }
