--- a/Module5.AD/appsettings.json
+++ b/Module5.AD/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "EPAM.onmicrosoft.com",
-    "TenantId": "b41b72d0-4e9f-4c26-8a69-f949f367c91d",
-    "ClientId": "972abc8b-6380-4873-a975-e781774d9e26",
+    "Domain": "[domain]",
+    "TenantId": "[tenanID]",
+    "ClientId": "[clientID]",
     "CallbackPath": "/signin-oidc",
     "SignedOutCallbackPath ": "/signout-callback-oidc"
   },
